--- a/Potfolio/index.html
+++ b/Potfolio/index.html
@@ -200,7 +200,7 @@
   })();
 
   // Handle form submission
-  document.getElementById("three").addEventListener("submit", function(e) {
+  document.getElementById("#three form").addEventListener("submit", function(e) {
     e.preventDefault();
 
     emailjs.sendForm("service_howgviv", "template_kq38711", this)
@@ -216,4 +216,5 @@
 </script>
 
 	</body>
+
 </html>
